Fixing button placement on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,8 +15,5 @@
 
 .stuffandthings {
    margin-top: 15px;
+   width: 100%;
 }
-
-/*.setList {
-    padding-right: 10px;
-}*/
